Add an email for PHP Documentation Group

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         },
         {
             "name": "The PHP Documentation Team",
+            "email": "phpdoc@lists.php.net",
             "homepage": "https://github.com/php/phd/graphs/contributors"
         }
     ],
