--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,10 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.3.0",
+        "ext-dom": "*",
+        "ext-sqlite3": "*",
+        "ext-xmlreader": "*"
     },
     "autoload": {
         "psr-0": {
