Re-introducte support for GeSHi syntax highlighter
GeSHi 1.1.x however, is not supported as it was in development stage back
then and there is no version working with Composer.

I'm also not particularly happy with using unoficiall fork - there is
official one, even submitted to packagist but the author screwed things
up and it's unusable.

--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,9 @@
         "ext-sqlite3": "*",
         "ext-xmlreader": "*"
     },
+    "suggest": {
+        "easybook/geshi": "For using GeSHi as code highlighter"
+    },
     "autoload": {
         "psr-0": {
             "phpdotnet\\": "."
